--- a/MyCar/app/src/main/res/layout/activity_car_info.xml
+++ b/MyCar/app/src/main/res/layout/activity_car_info.xml
@@ -38,11 +38,11 @@
         android:id="@+id/button3"
         android:layout_width="88dp"
         android:layout_height="48dp"
-        android:layout_marginStart="44dp"
         android:backgroundTint="#3DBD19"
         android:onClick="refillTf"
         android:text="Refill"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/tf"
+        app:layout_constraintStart_toStartOf="@+id/tf"
         app:layout_constraintTop_toBottomOf="@+id/tf" />
 
     <TextView
@@ -62,11 +62,11 @@
         android:id="@+id/tv_brand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
@@ -97,33 +97,31 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="8dp"
         android:text="Power Steering"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/psf"
-        app:layout_constraintStart_toEndOf="@+id/textView8" />
+        app:layout_constraintEnd_toEndOf="@+id/psf"
+        app:layout_constraintStart_toStartOf="@+id/psf" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginBottom="8dp"
         android:text="Transmission"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/tf"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/tf"
+        app:layout_constraintStart_toStartOf="@+id/tf" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="88dp"
         android:layout_height="48dp"
-        android:layout_marginStart="24dp"
         android:backgroundTint="#3DBD19"
         android:onClick="refillBf"
         android:text="Refill"
-        app:layout_constraintStart_toEndOf="@+id/button4"
+        app:layout_constraintEnd_toEndOf="@+id/bf"
+        app:layout_constraintStart_toStartOf="@+id/bf"
         app:layout_constraintTop_toBottomOf="@+id/bf" />
 
     <ProgressBar
@@ -158,11 +156,11 @@
         android:id="@+id/button2"
         android:layout_width="88dp"
         android:layout_height="48dp"
-        android:layout_marginStart="56dp"
         android:backgroundTint="#3DBD19"
         android:onClick="refillEc"
         android:text="Refill"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="@+id/ec"
+        app:layout_constraintStart_toStartOf="@+id/ec"
         app:layout_constraintTop_toBottomOf="@+id/ec" />
 
     <TextView
@@ -197,12 +195,11 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginBottom="8dp"
         android:text="Breaks"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/bf"
-        app:layout_constraintStart_toEndOf="@+id/textView9" />
+        app:layout_constraintEnd_toEndOf="@+id/bf"
+        app:layout_constraintStart_toStartOf="@+id/bf" />
 
     <TextView
         android:id="@+id/textView10"
@@ -219,12 +216,11 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginBottom="8dp"
         android:text="Engine Coolant"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/ec"
-        app:layout_constraintStart_toEndOf="@+id/textView6" />
+        app:layout_constraintEnd_toEndOf="@+id/ec"
+        app:layout_constraintStart_toStartOf="@+id/ec" />
 
     <ProgressBar
         android:id="@+id/psf"
@@ -241,16 +237,17 @@
 
     <TextView
         android:id="@+id/bf_progress"
-        android:layout_width="33dp"
-        android:layout_height="22dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
         android:text="60%"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/bf"
         app:layout_constraintEnd_toEndOf="@+id/bf"
-        app:layout_constraintHorizontal_bias="0.537"
+        app:layout_constraintHorizontal_bias="0.561"
         app:layout_constraintStart_toStartOf="@+id/bf"
         app:layout_constraintTop_toTopOf="@+id/bf"
-        app:layout_constraintVertical_bias="0.602">
+        app:layout_constraintVertical_bias="0.493">
 
     </TextView>
 
@@ -270,51 +267,50 @@
         android:id="@+id/tv_model"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="#FFFFFF"
-        app:layout_constraintStart_toEndOf="@+id/tv_brand"
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginBottom="8dp"
         android:text="Engine Oil"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/eo"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/eo"
+        app:layout_constraintStart_toStartOf="@+id/eo" />
 
     <TextView
         android:id="@+id/psf_progress"
-        android:layout_width="29dp"
-        android:layout_height="22dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="60%"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/psf"
         app:layout_constraintEnd_toEndOf="@+id/psf"
-        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="@+id/psf"
         app:layout_constraintTop_toTopOf="@+id/psf"
-        app:layout_constraintVertical_bias="0.576">
+        app:layout_constraintVertical_bias="0.493">
 
     </TextView>
 
     <TextView
         android:id="@+id/tf_progress"
-        android:layout_width="28dp"
-        android:layout_height="19dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="60%"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/tf"
         app:layout_constraintEnd_toEndOf="@+id/tf"
-        app:layout_constraintHorizontal_bias="0.527"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="@+id/tf"
         app:layout_constraintTop_toTopOf="@+id/tf"
-        app:layout_constraintVertical_bias="0.58">
+        app:layout_constraintVertical_bias="0.493">
 
     </TextView>
 
@@ -322,33 +318,33 @@
         android:id="@+id/button"
         android:layout_width="88dp"
         android:layout_height="48dp"
-        android:layout_marginStart="80dp"
         android:backgroundTint="#3DBD19"
         android:onClick="refillEo"
         android:text="Refill"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/eo"
+        app:layout_constraintStart_toStartOf="@+id/eo"
         app:layout_constraintTop_toBottomOf="@+id/eo" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="88dp"
         android:layout_height="48dp"
-        android:layout_marginStart="24dp"
         android:backgroundTint="#3DBD19"
         android:onClick="refillPsf"
         android:text="Refill"
-        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="@+id/psf"
+        app:layout_constraintStart_toStartOf="@+id/psf"
         app:layout_constraintTop_toBottomOf="@+id/psf" />
 
     <TextView
         android:id="@+id/tv_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="#FFFFFF"
-        app:layout_constraintStart_toEndOf="@+id/tv_model"
+        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
@@ -368,11 +364,11 @@
         android:id="@+id/tv_plate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="#FFFFFF"
-        app:layout_constraintStart_toEndOf="@+id/tv_color"
+        app:layout_constraintEnd_toEndOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <ProgressBar
